Implementar rota GET e POST Persistencia dynamodb e consulta ajuste tabela