@@ -1,11 +1,14 @@
 package com.example.demo.adapter.outbound.repository;
 
+import com.example.demo.adapter.outbound.repository.mapper.PedidoEntityMapper;
 import com.example.demo.core.domain.Pedido;
 import com.example.demo.core.ports.outbound.pedido.ListarPedidosAdapterPort;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
-import java.time.LocalDateTime;
+import java.time.LocalDate;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -20,8 +23,16 @@ public class ListarPedidoAdapter implements ListarPedidosAdapterPort {
 
     @Override
     public List<Pedido> listarTodosPedidos() {
-        final var result = repository.listarPedidosPorStatus("", LocalDateTime.now());
-        //return PedidoMapper.INSTANCE.mapFrom(result);
-        return List.of();
+        List<String> listaStatus = Arrays.asList("RECEBIDO", "EM_PREPARACAO", "PRONTO", "FINALIZADO");
+        List<Pedido> listaPedido = new ArrayList<>();
+
+         listaStatus.forEach(item -> {
+             listaPedido.addAll(
+                     PedidoEntityMapper.INSTANCE.mapFrom(
+                             repository.listarPedidosPorStatus(item, LocalDate.now())));
+         });
+
+
+        return listaPedido;
     }
 }
